Update docs and requirements for current backend and test setup

--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -1,3 +1,8 @@
+# LLM server dependencies
+flask
+flask-cors
+pytest
+
 # Placeholder for LLM server dependencies
 # Add packages like flask, openai, etc. as needed 
 flask
