fix: resolve all flake8, black, and pre-commit issues (E501, E402, formatting)

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ Thumbs.db
 
 # Docker
 *.env
-docker-compose.override.yml 
+docker-compose.override.yml
+
+# RAG data (do not commit book content)
+llm-server/rag-data/
