--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r llm-server/requirements.txt
         pip install pytest
+        pip install pre-commit
+    - name: Run pre-commit checks
+      run: pre-commit run --all-files
     - name: Run tests
       run: |
         cd llm-server
-        pytest 
+        pytest
