--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     hooks:
       - id: flake8
         language_version: python3
+        args: [--max-line-length=88]
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.0
     hooks:
